--- a/includes/css/sass/_search.scss
+++ b/includes/css/sass/_search.scss
@@ -1,4 +1,4 @@
-.browse-cont, .filters-cont {
+.browse-cont, .filters-cont, .book-info-cont, .share-cont {
   @include size(100%, 100%);
   .input-cont {
     @include size(80%, 70%);
