--- a/partials/browse.html
+++ b/partials/browse.html
@@ -12,7 +12,7 @@
                 <section class="filter-cont"><p>Filter to: All</p></section>
                 <section class="clear-filter-cont"><p>Clear filters</p></section>
             </section>
-            <section class="book-cont" ng-repeat="book in books">
+            <section class="book-cont" ng-repeat="book in books" ng-click="book_info(book)">
                 <section class="image"></section>
                 <section class="info-cont">
                     <section class="title-cont"><p>{{ book.name }}</p></section>
